// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact Card Component Snapshot (ContactCard) Should match snapshot 1`] = `
<div
  className="css-xiku2a"
  data-testid="box.contactcard.container"
>
  <div
    className="css-er5rnb"
    data-testid="center.contactcard.titleposition"
  >
    <p
      className="chakra-text css-0"
      data-testid="text.contactcard.title"
    >
      Drop your message
    </p>
  </div>
  <div
    className="css-1kck0el"
    data-testid="box.contactform.container"
  >
    <form
      className="css-0"
      data-testid="box.contactform.form"
      onSubmitCapture={[Function]}
    >
      <div
        className="chakra-stack css-17kdbol"
      >
        <div
          aria-label="Form Group"
          className="chakra-form-control css-0"
          data-testid=":ra:-form-container-form-control"
          role="group"
        >
          <label
            className="chakra-form__label css-168uyi5"
            data-testid=":ra:-form-container-label"
            htmlFor="name"
            id="name-label"
          >
            Name
          </label>
          <div
            className="chakra-input__group css-4302v8"
            data-testid=":r9:-input-field-group"
          >
            <input
              className="chakra-input css-0"
              data-testid=":r9:-input-field-input"
              disabled={false}
              id="name"
              name="details.name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Input your name"
              readOnly={false}
              required={false}
              role="input"
              type="text"
            />
          </div>
        </div>
        <div
          aria-label="Form Group"
          className="chakra-form-control css-0"
          data-testid=":rd:-form-container-form-control"
          role="group"
        >
          <label
            className="chakra-form__label css-168uyi5"
            data-testid=":rd:-form-container-label"
            htmlFor="emailAddress"
            id="emailAddress-label"
          >
            Email
          </label>
          <div
            className="chakra-input__group css-4302v8"
            data-testid=":rc:-input-field-group"
          >
            <input
              className="chakra-input css-0"
              data-testid=":rc:-input-field-input"
              disabled={false}
              id="emailAddress"
              name="emailAddress"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Input your email address"
              readOnly={false}
              required={false}
              role="input"
              type="text"
            />
          </div>
        </div>
        <div
          aria-label="Form Group"
          className="chakra-form-control css-0"
          data-testid=":rg:-form-container-form-control"
          role="group"
        >
          <label
            className="chakra-form__label css-168uyi5"
            data-testid=":rg:-form-container-label"
            htmlFor="message"
            id="message-label"
          >
            Desciption of concern
          </label>
          <div
            className="chakra-input__group css-4302v8"
          >
            <textarea
              className="chakra-textarea css-djz069"
              data-testid=":rf:-textarea-field-input"
              disabled={false}
              id="message"
              label="Desciption of concern"
              name="message"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Enter description"
              readOnly={false}
              required={false}
            />
          </div>
        </div>
        <button
          className="chakra-button css-l01cow"
          data-testid="button.contactform.submit"
          disabled={false}
          type="submit"
        >
          Send
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Contact Form Component Snapshot (ContactForm) Should match snapshot 1`] = `
<div
  className="css-1kck0el"
  data-testid="box.contactform.container"
>
  <form
    className="css-0"
    data-testid="box.contactform.form"
    onSubmitCapture={[Function]}
  >
    <div
      className="chakra-stack css-17kdbol"
    >
      <div
        aria-label="Form Group"
        className="chakra-form-control css-0"
        data-testid=":r1:-form-container-form-control"
        role="group"
      >
        <label
          className="chakra-form__label css-168uyi5"
          data-testid=":r1:-form-container-label"
          htmlFor="name"
          id="name-label"
        >
          Name
        </label>
        <div
          className="chakra-input__group css-4302v8"
          data-testid=":r0:-input-field-group"
        >
          <input
            className="chakra-input css-0"
            data-testid=":r0:-input-field-input"
            disabled={false}
            id="name"
            name="details.name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Input your name"
            readOnly={false}
            required={false}
            role="input"
            type="text"
          />
        </div>
      </div>
      <div
        aria-label="Form Group"
        className="chakra-form-control css-0"
        data-testid=":r4:-form-container-form-control"
        role="group"
      >
        <label
          className="chakra-form__label css-168uyi5"
          data-testid=":r4:-form-container-label"
          htmlFor="emailAddress"
          id="emailAddress-label"
        >
          Email
        </label>
        <div
          className="chakra-input__group css-4302v8"
          data-testid=":r3:-input-field-group"
        >
          <input
            className="chakra-input css-0"
            data-testid=":r3:-input-field-input"
            disabled={false}
            id="emailAddress"
            name="emailAddress"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Input your email address"
            readOnly={false}
            required={false}
            role="input"
            type="text"
          />
        </div>
      </div>
      <div
        aria-label="Form Group"
        className="chakra-form-control css-0"
        data-testid=":r7:-form-container-form-control"
        role="group"
      >
        <label
          className="chakra-form__label css-168uyi5"
          data-testid=":r7:-form-container-label"
          htmlFor="message"
          id="message-label"
        >
          Desciption of concern
        </label>
        <div
          className="chakra-input__group css-4302v8"
        >
          <textarea
            className="chakra-textarea css-djz069"
            data-testid=":r6:-textarea-field-input"
            disabled={false}
            id="message"
            label="Desciption of concern"
            name="message"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter description"
            readOnly={false}
            required={false}
          />
        </div>
      </div>
      <button
        className="chakra-button css-l01cow"
        data-testid="button.contactform.submit"
        disabled={false}
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`Contact Page Component Snapshot (ContactPage) Should match snapshot 1`] = `
<div
  className="css-1jke4yk"
  data-testid="box.contactpage.container"
>
  <div
    className="css-1yom1oh"
    data-testid="box.contactpage.banner"
  >
    <div
      className="css-1eqrob5"
      data-testid="center.contactpage.iconposition"
    >
      <svg
        className="chakra-icon css-1rug128"
        data-testid="icon.contactpage.hovicon"
        focusable={false}
        viewBox="0 0 32 32"
      >
        <path
          d="M0 32L3.55556 28.4444V32H0ZM14.2222 32V26.6667L10.6667 30.2222V32H7.11111V24.8889L10.6667 21.3333V24.8889V26.6667L14.2222 23.1111V17.7778L17.7778 14.2222V17.7778V24.8889V32H14.2222ZM28.4444 17.7778V10.6667V7.11111L24.8889 10.6667V17.7778V28.4444H28.4444V17.7778ZM28.4444 32H24.8889H21.3333V17.7778V10.6667L24.8889 7.11111L28.4444 3.55556L32 0V3.55556V10.6667V17.7778V32H28.4444Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="css-gmuwbf"
      data-testid="center.contactpage.titlepostion"
    >
      <p
        className="chakra-text css-kbn7if"
        data-testid="text.contactpage.title"
      >
        Contact Us
      </p>
    </div>
    <div
      className="css-gmuwbf"
      data-testid="center.contactpage.secondarytitleposition"
    >
      <p
        className="chakra-text css-gnzpcw"
        data-testid="text.contactpage.secondarytitle"
      >
        Tell us what you need and we'll help you out.
      </p>
    </div>
  </div>
  <div
    className="css-1iuukto"
    data-testid="center.contactpage.secondarytitleposition"
  >
    <div
      className="css-14kz8y"
      data-testid="box.contactcard.container"
    >
      <div
        className="css-er5rnb"
        data-testid="center.contactcard.titleposition"
      >
        <p
          className="chakra-text css-0"
          data-testid="text.contactcard.title"
        >
          Drop your message
        </p>
      </div>
      <div
        className="css-1kck0el"
        data-testid="box.contactform.container"
      >
        <form
          className="css-0"
          data-testid="box.contactform.form"
          onSubmitCapture={[Function]}
        >
          <div
            className="chakra-stack css-17kdbol"
          >
            <div
              aria-label="Form Group"
              className="chakra-form-control css-0"
              data-testid=":rj:-form-container-form-control"
              role="group"
            >
              <label
                className="chakra-form__label css-168uyi5"
                data-testid=":rj:-form-container-label"
                htmlFor="name"
                id="name-label"
              >
                Name
              </label>
              <div
                className="chakra-input__group css-4302v8"
                data-testid=":ri:-input-field-group"
              >
                <input
                  className="chakra-input css-0"
                  data-testid=":ri:-input-field-input"
                  disabled={false}
                  id="name"
                  name="details.name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Input your name"
                  readOnly={false}
                  required={false}
                  role="input"
                  type="text"
                />
              </div>
            </div>
            <div
              aria-label="Form Group"
              className="chakra-form-control css-0"
              data-testid=":rm:-form-container-form-control"
              role="group"
            >
              <label
                className="chakra-form__label css-168uyi5"
                data-testid=":rm:-form-container-label"
                htmlFor="emailAddress"
                id="emailAddress-label"
              >
                Email
              </label>
              <div
                className="chakra-input__group css-4302v8"
                data-testid=":rl:-input-field-group"
              >
                <input
                  className="chakra-input css-0"
                  data-testid=":rl:-input-field-input"
                  disabled={false}
                  id="emailAddress"
                  name="emailAddress"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Input your email address"
                  readOnly={false}
                  required={false}
                  role="input"
                  type="text"
                />
              </div>
            </div>
            <div
              aria-label="Form Group"
              className="chakra-form-control css-0"
              data-testid=":rp:-form-container-form-control"
              role="group"
            >
              <label
                className="chakra-form__label css-168uyi5"
                data-testid=":rp:-form-container-label"
                htmlFor="message"
                id="message-label"
              >
                Desciption of concern
              </label>
              <div
                className="chakra-input__group css-4302v8"
              >
                <textarea
                  className="chakra-textarea css-djz069"
                  data-testid=":ro:-textarea-field-input"
                  disabled={false}
                  id="message"
                  label="Desciption of concern"
                  name="message"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Enter description"
                  readOnly={false}
                  required={false}
                />
              </div>
            </div>
            <button
              className="chakra-button css-l01cow"
              data-testid="button.contactform.submit"
              disabled={false}
              type="submit"
            >
              Send
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
